--- a/starter-code/styles/base.css
+++ b/starter-code/styles/base.css
@@ -12,6 +12,10 @@ hr {
   width: 80%;
 }
 
+article {
+  background-color: #f0f0f0;
+}
+
 /*TEXT STYLES
 =======================================*/
 p {
@@ -27,7 +31,7 @@ address {
 
 a, a:link, a:active {
   text-decoration: none;
-  color: #777;
+  color: #900;
 }
 
 a:hover, a:focus {
